Job title update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- resume header with your name and title -->
 		<h1>SANKARSHANA HOOLI</h1>
 			<hr>
-				BACHELOR OF ENGINEERING IN COMPUTER SCIENCE
+				ASPIRING CLOUD/SOFTWARE APPLICATIONS ENGINEER
 			<hr>
 		</header>
 		<main>
