--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/44bc2779ab.js" crossorigin="anonymous"></script>
-		<title>Sankarshana Hooli Resume</title>
+		<title>Resume of SANKARSHANA</title>
 	</head>
 
 	<body>
@@ -49,7 +49,7 @@
                         Visvesvaraya Technological University
                     </p>
                     <p>
-                        2019-2023
+                        2019-2023 (8.63 CGPA)
                     </p>
                     <h3><a id="awsst" href="https://coursera.org/share/71cbb4f7a92507f020059f033c4c9448">AWS Fundamentals Specialization</a></h3>
                     <p>
@@ -58,29 +58,15 @@
                     <p>
                         2020
                     </p>
-                    <h3>2<sup>nd</sup> Pre-University(PU) or Class 12<sup>th</sup></h3>
-                    <p>
-                        National College - Karnataka Board
-                    </p>
-                    <p>
-                        2018-2019
-                    </p>
-                    <h3>SSLC or 10<sup>th</sup></h3>
-                    <p>
-                        Sri Rajeshwari Vidyaniketan - CBSE
-                    </p>
-                    <p>
-                        2016-2017
-                    </p>
 					<!-- your education -->
 				</section>            
 			</article>
 			<article id="mainRight">
 				<section>
 					<h2>EXPERIENCE</h2>
-                    <h3>Web Master</h3>
+                    <h3>Web Master & Vice-Chair</h3>
                     <p>
-                        IEEE AMCEC Student Branch | 2021 - 2022
+                        IEEE AMCEC Student Branch | 2021 - 2023
                     </p>
                     <p>
                         Web infrasctructure lead in the IEEE AMCEC Student Branch
@@ -91,18 +77,14 @@
                         <li>Organized more than 8 workshops and 2 international conferences</li>
                     </ul>
 
-                    <h3>Volunteer</h3>
-                    <p>
-                        Adrishya | 2021 - 2023
-                    </p>
-                    <p>
-                        Volunteering and leading for Social cause
-                    </p>
+                    <h3>Blog Assistance and Aggregator</h3>
+                    <p>Major Project | AMC Engineering College</p>
+                    <p>Full Stack Python Application</p>
                     <ul>
-                        <li>Coordinated logistics and supply chain operations for events conducted by the team Adrishya</li>
-                        <li>Volunteer experience in the social service events conducted by Adrishya</li>
+                        <li>Lead a team of 4 in the development of the Web Application</li>
+                        <li>Utilized SQLite and Flask framework in the Backend for the application</li>
+                        <li>Encorporated MVC methodology while development of the App</li>
                     </ul>
-
                     <h3>Content Creation</h3>
                     <p>
                         Independent | 2021 - Present
